deployment/backend/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  # loadBalancerIP: 34.30.247.67
  ports:
  - name: backend-network
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: back
