deployment/backend/backend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  #annotations:
    #kubernetes.io/ingress.global-static-ip-name: 34.95.105.77
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 80
